# PARO2026-CI-CD

./: CMakeLists.txt
exercise1/: README.md
exercise1/include/: day-of-year.hpp
exercise1/src/: day-of-year.cpp
exercise1/ut/: day-of-year-tests.cpp
exercise2/: CMakeLists.txt  README.md
exercise2/application/: CMakeLists.txt  main.cpp
exercise2/include/: LetterHandler.hpp  Rewarder.hpp  scrabble.hpp
exercise2/src/: LetterHandler.cpp  Rewarder.cpp  scrabble.cpp
exercise2/ut/: CMakeLists.txt  scrabble-tests.cpp
exercise3/: README.md  rozwiazanie.txt
